--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                 <h1><a href="http://beerstrot.github.io/"><img class="img-logo" src="http://beerstrot.github.io/img/svgs/logo-red.svg" alt="logo"></a></h1>
+                 <h1><a href="http://beerstrot.it/"><img class="img-logo" src="http://beerstrot.github.io/img/svgs/logo-red.svg" alt="logo"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -35,7 +35,7 @@
                 <li class="divider"></li>
                 <li><a href="contatti.html">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
+                <li><a href="http://beerstrot.it/blog">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -315,12 +315,12 @@
     <div class="row">
         <div class="small-12 medium-12 large-12 columns">
             <ul class="inline-list navbar-footer-font">
-                <li><a href="http://beerstrot.github.io">Home</a></li>
+                <li><a href="http://beerstrot.it/">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="eventi.html">Eventi</a></li>
                 <li><a href="chi-siamo.html">Chi Siamo</a></li>
                 <li><a href="contatti.html">Contatti</a></li>
-                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
+                <li><a href="http://beerstrot.it/blog">Blog</a></li>
             </ul>
         </div>
     </div>
