--- a/404.html
+++ b/404.html
@@ -7,13 +7,44 @@
     <title>Beerstrot | Pagina non trovata</title>
     <meta name="description" content="Uuupsssss" />
     <meta name="author" content="Ca' Vecchia Beerstrot" />
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
-    <link rel="stylesheet" href="css/app.css" />
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" /> 
+    <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css"/>
 </head>
-    <body>
-        <div class="row">
+<body>
+<!-- navbar con hamburger -->
+    <nav class="top-bar" data-topbar role="navigation">
+        <ul class="title-area">
+            <li class="name">
+                 <h1><a href="http://beerstrot.github.io"><img class="img-logo" src="http://beerstrot.github.io/img/svgs/logo-red.svg" alt="logo"></a></h1>
+            </li>
+            <li class="toggle-topbar menu-icon">
+                <a href="#"><span></span></a>
+            </li>
+        </ul>
+        <section class="top-bar-section">
+            <ul class="right">
+                <li class="divider"></li>
+                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
+                <li class="divider"></li>
+                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
+                <li class="divider"></li>
+                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
+                <li class="divider"></li>
+                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
+                <li class="divider"></li>
+                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
+            </ul>
+        </section>
+    </nav>
+<!-- fine navbar con hamburger -->
+    <div class="row">
+        <div class="medium-12 large-12 columns">
             <h1>Abbiamo bevuto troppo <span>:)</span></h1>
+            <p>Non abbiamo idea di dove sia la pagina che cerchi.</p>
+            <a href="http://beerstrot.github.io">Torna a casa</a>
+
             <img src="" alt="">
         </div>
-    </body>
+    </div>
+</body>
 </html>
