--- a/menu/menu-tris-mini-hamburger.html
+++ b/menu/menu-tris-mini-hamburger.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Tre mini hamburger di frisona fresca appena macinati con patate fresche tagliate a mano." />
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
-    <link rel="stylesheet" href="css/app.css" />
+     <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css"/>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -268,8 +268,7 @@
     </div>
 <!-- fine navbar -->
      <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/fb.js"></script>
+    <script src="http://beerstrot.github.io/js/foundation.min.js"></script>
+    <script src="http://beerstrot.github.io/js/app.js"></script>
 </body>
 </html>
