--- a/contatti/index.html
+++ b/contatti/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <title>Beerstrot | Contatti</title>
     <meta name="description" content="Birre rigorosamente artigianali: servite nel bicchiere che ne risalta profumi e sapori. Impieghiamo ore per fare training ai nostri ragazzi."/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
