--- a/eventi/burlesque.html
+++ b/eventi/burlesque.html
@@ -3,7 +3,7 @@
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <title>Beerstrot | Burlesque</title>
     <meta name="description" content="Gloria e compagne ci delizieranno con uno spettacolo di Burlesque parigino e nel frattempo serviranno i tavoli con qualche pausa per lo spettacolo." />
     <meta name="author" content="Ca' Vecchia Beerstrot" />
