--- a/eventi/flamenco-e-birra.html
+++ b/eventi/flamenco-e-birra.html
@@ -3,7 +3,7 @@
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <title>Beerstrot | Flamenco e Birra</title>
     <meta name="description" content="La magica chitarra di Mendez DosCoines accompagnerà la presentazione della nuova birra Ourageous Quintupla IPA</a> e dei piatti appositamente creati dallo Chef Giovanni per l'occasione" />
     <meta name="author" content="Ca' Vecchia Beerstrot" />
