--- a/menu/menu-tomino-di-novara.html
+++ b/menu/menu-tomino-di-novara.html
@@ -3,7 +3,7 @@
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <title>Beerstrot | Tomino di Novara</title>
     <meta name="description" content="Tomino di latte di capra in salsa rosa" />
     <meta name="author" content="Ca' Vecchia Beerstrot" />
