--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="copyright" content="Beerstrot Copyright (c) 2015" />
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <link rel="canonical" href="http://beerstrot.it"/>
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css" />
     <link href="cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
 <!-- navbar con hamburger -->
