--- a/eventi/instagramer.html
+++ b/eventi/instagramer.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Blogger</title>
-    <meta name="description" content="120+ Instagramer si incontrano a Ca' Vecchia Beerstrot"/>
+    <title>Beerstrot | Instagramer</title>
+    <meta name="description" content="Instagramer si incontrano a Ca' Vecchia Beerstrot"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Blogger in libertà"/>
-    <meta name="twitter:description" content="120+ Instagramer si incontrano a Ca' Vecchia Beerstrot"/>
+    <meta name="twitter:title" content="Instagramer si incontrano a Ca' Vecchia Beerstrot"/>
+    <meta name="twitter:description" content="Più di 120 Instagramer, provenienti da tutta Italia, si incontrano a Ca' Vecchia per un Instawalk"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/instagramer.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/eventi/instagramer.html"/>
     <meta property="og:url" content="http://beerstrot.it/eventi/instagramer.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Blogger in libertà"/>
-    <meta property="og:description" content="120+ blogger si incontrano a Ca' Vecchia Beerstrot"/>
+    <meta property="og:title" content="120+ Instagramer si incontrano a Ca' Vecchia Beerstrot"/>
+    <meta property="og:description" content="Più di 120 Instagramer, provenienti da tutta Italia, si incontrano a Ca' Vecchia per un Instawalk"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/instagramer.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/blogger.html"/>
