--- a/eventi/instagramer.html
+++ b/eventi/instagramer.html
@@ -81,7 +81,7 @@
                 <h2>Come valorizzare le Marche</h2>
                 <p>Per il ciclo: Incontri</p>
                 <p>Più di 120 Instagramer (o Igers), provenienti da tutta Italia, si incontrano a Ca' Vecchia Beerstrot per un Instawalk. <a href="http://assemblea2015.instagramersitalia.it" target="_blank">Qui tutte le info</a></p>
-                <p>Abbiamo già avuto l'onore di averne qualcuno a cena e siamo lieti abbiano deciso di valorizzare Ca' Vecchia con la loro presenza.</p>
+                <p>Abbiamo già avuto l'onore di averne qualcuno a cena e siamo lieti abbiano deciso di valorizzare Ca' Vecchia Beerstrot con la loro presenza.</p>
                 <p>Per l'occasione, a partire dalle 16.30, serviremo birre artigianali di birrifici marchigiani e vino locale della cantina di Tavignano. A richiesta non mancheranno spritz e gin tonic!</p>
                 <p>Condividi le tue foto e video con <code>#beerstrot</code></p>
         </article>
