--- a/menu/index.html
+++ b/menu/index.html
@@ -25,12 +25,11 @@
         n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
         t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
         document,'script','//connect.facebook.net/en_US/fbevents.js');
-
         fbq('init', '770709373057085');
         fbq('track', "PageView");</script>
-        <noscript><img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id=770709373057085&ev=PageView&noscript=1"
-    /></noscript>
+    <noscript><img height="1" width="1" style="display:none"
+        src="https://www.facebook.com/tr?id=770709373057085&ev=PageView&noscript=1"/>
+    </noscript>
 <!-- End Facebook Pixel Code -->
 </head>
 <body>
