--- a/eventi/san-silvestro.html
+++ b/eventi/san-silvestro.html
@@ -99,7 +99,7 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Cenone dell'Ultimo dell'Anno? <br>Fai il botto a Ca' Vecchia Beerstrot</h2>
                 <p>Per la sarata di San Silvestro abbiamo creato un <strong>menù speciale</strong> a 65€ bevande incluse.</p>
-                <p>Solo su prenotazone.</p>
+                <p>Solo su prenotazone. Affrettati: abbiamo solo 60 posti disponibili.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <hr>
