--- a/eventi/san-silvestro.html
+++ b/eventi/san-silvestro.html
@@ -134,7 +134,7 @@
                 </ul>
                 <hr>
                 <p>Finiti caffè e amari alle 01:00 circa, spostiamo i tavoli e diamo inizio alle danze. <strong>Locale aperto a tutti</strong>.</p>
-                 <p>Birre artigianali, calice di Prosecco e Drinks a bancone a partire da 5€. Buffet di Frutta.</p>
+                 <p>Birre artigianali, calice di Prosecco e Drinks a bancone a partire da 5€. Buffet di Frutta per tutti.</p>
             </div>
         </article>
     </div>
